--- a/trunk/JLanguageTool/build.properties
+++ b/trunk/JLanguageTool/build.properties
@@ -42,6 +42,9 @@ ext.tika.lib = ${ext.dir}/${tika.lib}
 xmlsyntax.lib = xml-text-editor-0.0.3.jar
 ext.xmlsyntax.lib = ${ext.dir}/${xmlsyntax.lib}
 
+jna.lib = jna.jar
+ext.jna.lib = ${ext.dir}/${jna.lib}
+
 ext.lucene-core.lib = ${ext.dir}/lucene-core-3.1.0.jar
 ext.lucene-queries.lib = ${ext.dir}/lucene-queries-3.1.0.jar
 ext.lucene-test-framework.lib = ${ext.dir}/lucene-test-framework-3.1.0.jar
