adapt build to use "hunspell" sub directory

--- a/trunk/JLanguageTool/build.xml
+++ b/trunk/JLanguageTool/build.xml
@@ -577,8 +577,8 @@
 	<copy file="${resource.dir}/pl/compounds.txt" todir="${dist.dir}/resource/pl" />
 	<copy file="${resource.dir}/pl/multiwords.txt" todir="${dist.dir}/resource/pl" />
 	<copy file="${resource.dir}/pl/disambiguation.xml" todir="${dist.dir}/resource/pl" />
-	<copy file="${resource.dir}/pl/pl_PL.aff" todir="${dist.dir}/resource/pl" />
-	<copy file="${resource.dir}/pl/pl_PL.dic" todir="${dist.dir}/resource/pl" />
+	<copy file="${resource.dir}/pl/hunspell/pl_PL.aff" todir="${dist.dir}/resource/pl/hunspell" />
+	<copy file="${resource.dir}/pl/hunspell/pl_PL.dic" todir="${dist.dir}/resource/pl/hunspell" />
 
 	<copy file="${resource.dir}/nl/dutch.dict" todir="${dist.dir}/resource/nl" />
 	<copy file="${resource.dir}/nl/dutch.info" todir="${dist.dir}/resource/nl" />
