add hunspell to builds, create a zip for standalone (unfortunately, hunspell still doesn't work for jws!)

--- a/trunk/JLanguageTool/.classpath
+++ b/trunk/JLanguageTool/.classpath
@@ -3,14 +3,28 @@
 	<classpathentry kind="src" path="src/test"/>
 	<classpathentry kind="src" path="src/dev"/>
 	<classpathentry kind="src" path="src/java"/>
-	<classpathentry excluding="test/|dev/|java/" kind="src" path="src"/>
-	<classpathentry kind="lib" path="libs/build/junit.jar"/>
+	<classpathentry excluding="test/|dev/|java/" kind="src" path="src">
+		<attributes>
+			<attribute name="org.eclipse.jdt.launching.CLASSPATH_ATTR_LIBRARY_PATH_ENTRY" value="JLanguageTool/libs"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="src" path="libs/native-lib"/>
+	<classpathentry kind="lib" path="libs/build/junit.jar">
+		<attributes>
+			<attribute name="org.eclipse.jdt.launching.CLASSPATH_ATTR_LIBRARY_PATH_ENTRY" value="JLanguageTool/libs/native-lib"/>
+		</attributes>
+	</classpathentry>
 	<classpathentry kind="lib" path="libs/ooo/juh.jar"/>
 	<classpathentry kind="lib" path="libs/ooo/jurt.jar"/>
 	<classpathentry kind="lib" path="libs/ooo/ridl.jar"/>
 	<classpathentry kind="lib" path="libs/ooo/unoil.jar"/>
 	<classpathentry kind="lib" path="libs/swc-engine-1.0.1-SNAPSHOT-jar-with-dependencies.jar"/>
 	<classpathentry kind="lib" path="libs/segment-1.3.8.jar"/>
+	<classpathentry kind="lib" path="libs/jna.jar">
+		<attributes>
+			<attribute name="org.eclipse.jdt.launching.CLASSPATH_ATTR_LIBRARY_PATH_ENTRY" value="JLanguageTool/libs/native-lib"/>
+		</attributes>
+	</classpathentry>
 	<classpathentry exported="true" kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/3"/>
 	<classpathentry kind="lib" path="libs/jWordSplitter.jar" sourcepath="/jWordSplitter"/>
