initial support for Greek, by Panagiotis Minos

--- a/trunk/JLanguageTool/build.xml
+++ b/trunk/JLanguageTool/build.xml
@@ -671,6 +671,13 @@
 	<copy file="${resource.dir}/ast/asturian.dict" todir="${dist.dir}/resource/ast" />
 	<copy file="${resource.dir}/ast/asturian.info" todir="${dist.dir}/resource/ast" />
 
+	<copy file="${resource.dir}/el/el.dict" todir="${dist.dir}/resource/el" />
+	<copy file="${resource.dir}/el/el.info" todir="${dist.dir}/resource/el" />
+	<copy file="${resource.dir}/el/el_tags.txt" todir="${dist.dir}/resource/el" />
+	<copy file="${resource.dir}/el/el_synth.dict" todir="${dist.dir}/resource/el" />
+	<copy file="${resource.dir}/el/el_synth.info" todir="${dist.dir}/resource/el" />
+	<copy file="${resource.dir}/el/disambiguation.xml" todir="${dist.dir}/resource/el" />
+
 	<copy file="${resource.dir}/xx/dummy.dict" tofile="${dist.dir}/resource/cs/czech.dict" />
 	<copy todir="${dist.dir}/rules">
 		<fileset dir="src/rules" excludes="CVS" />
