--- a/trunk/JLanguageTool/.classpath
+++ b/trunk/JLanguageTool/.classpath
@@ -42,6 +42,6 @@
 	<classpathentry kind="lib" path="libs/commons-validator-1.3.1.jar"/>
 	<classpathentry kind="lib" path="libs/xml-text-editor-0.0.3.jar"/>
 	<classpathentry kind="lib" path="libs/morfologik-fsa-1.5.2.jar"/>
-	<classpathentry kind="lib" path="libs/morfologik-stemming-1.5.2.jar"/>
+	<classpathentry kind="lib" path="libs/morfologik-stemming-1.5.2.jar" sourcepath="C:/Users/user/.m2/repository/org/carrot2/morfologik-stemming/1.5.2/morfologik-stemming-1.5.2-sources.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
