--- a/trunk/JLanguageTool/build.xml
+++ b/trunk/JLanguageTool/build.xml
@@ -162,7 +162,7 @@
 		<mkdir dir="${junit.classes.dir}" />
 		<mkdir dir="${dist.dir}/report/tests" />
 
-		<javac encoding="${encoding}" srcdir="${src.test.dir}" includes="**/*Test.java" destdir="${junit.classes.dir}" source="${source}" target="${target}" debug="${debug}">
+		<javac includeAntRuntime="false" encoding="${encoding}" srcdir="${src.test.dir}" includes="**/*Test.java" destdir="${junit.classes.dir}" source="${source}" target="${target}" debug="${debug}">
 			<classpath refid="junit.classpath" />
 		</javac>
 
@@ -207,10 +207,10 @@
 		<mkdir dir="${junit.classes.dir}" />
 		<mkdir dir="${dist.dir}/report/tests" />
 
-		<javac encoding="${encoding}" srcdir="${src.test.dir}" includes="**/*Test.java,**/XMLValidator.java,**/TestTools.java" destdir="${junit.classes.dir}" source="${source}" target="${target}" debug="${debug}">
+		<javac includeAntRuntime="false" encoding="${encoding}" srcdir="${src.test.dir}" includes="**/*Test.java,**/XMLValidator.java,**/TestTools.java" destdir="${junit.classes.dir}" source="${source}" target="${target}" debug="${debug}">
 			<classpath refid="junit.classpath" />
 		</javac>
-		<javac encoding="${encoding}" srcdir="${src.java.dir}" includes="**/*.java" destdir="${junit.classes.dir}" source="${source}" target="${target}" debug="${debug}">
+		<javac includeAntRuntime="false" encoding="${encoding}" srcdir="${src.java.dir}" includes="**/*.java" destdir="${junit.classes.dir}" source="${source}" target="${target}" debug="${debug}">
 			<classpath refid="junit.classpath" />
 		</javac>
 		<copy todir="${junit.classes.dir}/org/languagetool/">
@@ -294,13 +294,13 @@
 
 		<mkdir dir="${build.classes}" />
 
-		<javac encoding="${encoding}" srcdir="${src.java.dir}" includes="org/languagetool/**/*.java" excludes="org/languagetool/dev/**/*.java,org/languagetool/openoffice/*.java" destdir="${build.classes}" source="${source}" target="${target}" debug="${debug}">
+		<javac includeAntRuntime="false" encoding="${encoding}" srcdir="${src.java.dir}" includes="org/languagetool/**/*.java" excludes="org/languagetool/dev/**/*.java,org/languagetool/openoffice/*.java" destdir="${build.classes}" source="${source}" target="${target}" debug="${debug}">
 			<classpath refid="classpath" />
 		</javac>
-        <javac encoding="${encoding}" srcdir="${src.java.dev.dir}" includes="org/languagetool/dev/**/*.java" destdir="${build.classes}" source="${source}" target="${target}" debug="${debug}">
+        <javac includeAntRuntime="false" encoding="${encoding}" srcdir="${src.java.dev.dir}" includes="org/languagetool/dev/**/*.java" destdir="${build.classes}" source="${source}" target="${target}" debug="${debug}">
             <classpath refid="classpath" />
         </javac>
-		<javac encoding="${encoding}" srcdir="${src.test.dir}" includes="org/languagetool/rules/patterns/PatternRuleTest.java
+		<javac includeAntRuntime="false" encoding="${encoding}" srcdir="${src.test.dir}" includes="org/languagetool/rules/patterns/PatternRuleTest.java
 		org/languagetool/tagging/disambiguation/rules/DisambiguationRuleTest.java
 		org/languagetool/rules/bitext/BitextPatternRuleTest.java
 		org/languagetool/ValidateXMLTest.java
@@ -391,7 +391,7 @@
 <!-- OpenOffice.org compile -->
 <!-- ================================================================== -->
 <target name="ooo-compile">
-<javac encoding="${encoding}" srcdir="${src.java.dir}" includes="**/*.java" excludes="org/languagetool/dev/*.java" destdir="${build.classes}" source="${source}" target="${target}" debug="${debug}">
+<javac includeAntRuntime="false" encoding="${encoding}" srcdir="${src.java.dir}" includes="**/*.java" excludes="org/languagetool/dev/*.java" destdir="${build.classes}" source="${source}" target="${target}" debug="${debug}">
 	<classpath refid="ooo.classpath" />
 </javac>
 <copy todir="${build.classes}/org/languagetool/">
@@ -696,7 +696,7 @@
 	
 <target name="ooo-internal" depends="common,ooo-build">
 <!-- prepare properties file automatically -->
-<javac encoding="${encoding}" srcdir="${src.dir}/dev" includes="org/languagetool/dev/PrintLocales.java" destdir="${build.classes}" source="${source}" target="${target}" debug="${debug}">
+<javac includeAntRuntime="false" encoding="${encoding}" srcdir="${src.dir}/dev" includes="org/languagetool/dev/PrintLocales.java" destdir="${build.classes}" source="${source}" target="${target}" debug="${debug}">
 </javac>
 
 <jar jarfile="${dist.dir}/printlocales.jar" basedir="${build.classes}" includes="org/languagetool/dev/**">
