disable spell checking for Wikipedia

--- a/trunk/JLanguageTool/src/resource/ltcommunity/disabled_rules.properties
+++ b/trunk/JLanguageTool/src/resource/ltcommunity/disabled_rules.properties
@@ -1,5 +1,5 @@
 
-all=UNPAIRED_BRACKETS,UPPERCASE_SENTENCE_START,WORD_REPEAT_RULE,COMMA_PARENTHESIS_WHITESPACE,WHITESPACE_RULE
+all=UNPAIRED_BRACKETS,UPPERCASE_SENTENCE_START,WORD_REPEAT_RULE,COMMA_PARENTHESIS_WHITESPACE,WHITESPACE_RULE,HUNSPELL_RULE
 
 de=BISSTRICH,DE_AGREEMENT,DE_CASE,AUSLASSUNGSPUNKTE,GERMAN_WORD_REPEAT_RULE
 pl=CUDZYSLOW_DRUKARSKI,BRAK_SPACJI,BRAK_KROPKI
