--- a/trunk/JLanguageTool/build.xml
+++ b/trunk/JLanguageTool/build.xml
@@ -147,8 +147,22 @@
         <antcall target="test"/>
     </target>
 
-	<target name="test-internal" depends="clean,init,build,ooo-build" description="Runs unit tests">
-
+	<target name="test-hunspell-libs">
+		<echo>Testing versions of hunspell libraries...</echo>
+			<exec failonerror="false" resultproperty="return.code" os="Windows XP Windows Vista Windows 7" dir="${src.java.dev.dir}/tools" executable="cscript">
+					<arg value="/nologo"/>
+					<arg value="VersionInfo.js"/>
+			</exec>
+		 <fail message="The version numbers of two Windows DLLs are different!">
+		     <condition>
+		       <equals arg1="-1" arg2="${return.code}"/>
+		     </condition>
+		   </fail>
+	</target>
+	
+	<target name="test-internal" depends="clean,init,test-hunspell-libs,build,ooo-build" description="Runs unit tests">		
+		
+		
 		<mkdir dir="${junit.classes.dir}" />
 		<mkdir dir="${dist.dir}/report/tests" />
 
