some progress on the unifier

--- a/trunk/JLanguageTool/.classpath
+++ b/trunk/JLanguageTool/.classpath
@@ -9,7 +9,7 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="src" path="libs/native-lib"/>
-	<classpathentry kind="lib" path="libs/build/junit.jar">
+	<classpathentry kind="lib" path="libs/build/junit.jar" sourcepath="C:/Users/user/.m2/repository/junit/junit/4.8.2/junit-4.8.2-sources.jar">
 		<attributes>
 			<attribute name="org.eclipse.jdt.launching.CLASSPATH_ATTR_LIBRARY_PATH_ENTRY" value="JLanguageTool/libs/native-lib"/>
 		</attributes>
