--- a/trunk/JLanguageTool/.classpath
+++ b/trunk/JLanguageTool/.classpath
@@ -25,6 +25,7 @@
 			<attribute name="org.eclipse.jdt.launching.CLASSPATH_ATTR_LIBRARY_PATH_ENTRY" value="JLanguageTool/libs/native-lib"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry kind="lib" path="libs/morfologik-stemming-1.5.3.jar"/>
 	<classpathentry exported="true" kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/3"/>
 	<classpathentry kind="lib" path="libs/jWordSplitter.jar" sourcepath="/jWordSplitter"/>
@@ -41,7 +42,6 @@
 	<classpathentry kind="lib" path="libs/CJFtransform_v1.0.1_bin.jar"/>
 	<classpathentry kind="lib" path="libs/commons-validator-1.3.1.jar"/>
 	<classpathentry kind="lib" path="libs/xml-text-editor-0.0.3.jar"/>
-	<classpathentry kind="lib" path="libs/morfologik-fsa-1.5.2.jar" sourcepath="C:/Users/user/.m2/repository/org/carrot2/morfologik-fsa/1.5.2/morfologik-fsa-1.5.2-sources.jar"/>
-	<classpathentry kind="lib" path="libs/morfologik-stemming-1.5.2.jar" sourcepath="C:/Users/user/.m2/repository/org/carrot2/morfologik-stemming/1.5.2/morfologik-stemming-1.5.2-sources.jar"/>
+	<classpathentry kind="lib" path="libs/morfologik-fsa-1.5.3.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
