enable assertions in tests

--- a/trunk/JLanguageTool/build.xml
+++ b/trunk/JLanguageTool/build.xml
@@ -187,6 +187,10 @@
 			
 		<junit printsummary="true" failureproperty="tests.failed" showoutput="true" maxmemory="250M" fork="yes" forkmode="once" haltonfailure="${haltonfailure}">
 
+      <assertions>
+        <enable/>
+      </assertions>
+
 			<formatter type="xml" usefile="true" />
 			<formatter type="brief" usefile="false" />
 			<classpath refid="test.classpath" />			
