[pl] replace hunspell with morfologik

--- a/trunk/JLanguageTool/.classpath
+++ b/trunk/JLanguageTool/.classpath
@@ -26,6 +26,7 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="lib" path="libs/morfologik-stemming-1.5.3.jar"/>
+	<classpathentry kind="lib" path="libs/morfologik-speller-1.5.4.jar" sourcepath="/morfologik-speller"/>
 	<classpathentry exported="true" kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/3"/>
 	<classpathentry kind="lib" path="libs/jWordSplitter.jar" sourcepath="/jWordSplitter"/>
@@ -42,6 +43,6 @@
 	<classpathentry kind="lib" path="libs/CJFtransform_v1.0.1_bin.jar"/>
 	<classpathentry kind="lib" path="libs/commons-validator-1.3.1.jar"/>
 	<classpathentry kind="lib" path="libs/xml-text-editor-0.0.3.jar"/>
-	<classpathentry kind="lib" path="libs/morfologik-fsa-1.5.3.jar"/>
+	<classpathentry kind="lib" path="libs/morfologik-fsa-1.5.3.jar" sourcepath="/morfologik-fsa"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
