--- a/trunk/JLanguageTool/build.properties
+++ b/trunk/JLanguageTool/build.properties
@@ -26,8 +26,10 @@ ext.ooo.dir = ./libs/ooo
 
 morfologik.fsa.lib = morfologik-fsa-1.5.3.jar
 morfologik.stemming.lib = morfologik-stemming-1.5.3.jar
+morfologik.speller.lib = morfologik-speller-1.5.4.jar
 ext.morfologik.fsa.lib = ${ext.dir}/${morfologik.fsa.lib}
 ext.morfologik.stemming.lib = ${ext.dir}/${morfologik.stemming.lib}
+ext.morfologik.speller.lib = ${ext.dir}/${morfologik.speller.lib} 
 ext.jwordsplitter.lib = ${ext.dir}/jWordSplitter.jar
 segment.lib = segment-1.3.8.jar
 ext.segment.lib = ${ext.dir}/${segment.lib}
