--- a/trunk/JLanguageTool/.classpath
+++ b/trunk/JLanguageTool/.classpath
@@ -25,7 +25,7 @@
 			<attribute name="org.eclipse.jdt.launching.CLASSPATH_ATTR_LIBRARY_PATH_ENTRY" value="JLanguageTool/libs/native-lib"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="libs/morfologik-stemming-1.5.3.jar"/>
+	<classpathentry kind="lib" path="libs/morfologik-stemming-1.5.3.jar" sourcepath="/morfologik-stemming"/>
 	<classpathentry kind="lib" path="libs/morfologik-speller-1.5.4.jar" sourcepath="/morfologik-speller"/>
 	<classpathentry exported="true" kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/3"/>
