--- a/trunk/JLanguageTool/src/resource/ltcommunity/disabled_rules.properties
+++ b/trunk/JLanguageTool/src/resource/ltcommunity/disabled_rules.properties
@@ -1,6 +1,7 @@
 
 all=UNPAIRED_BRACKETS,UPPERCASE_SENTENCE_START,WORD_REPEAT_RULE,COMMA_PARENTHESIS_WHITESPACE,WHITESPACE_RULE,HUNSPELL_RULE
 
+fr=FRENCH_WHITESPACE
 de=BISSTRICH,DE_AGREEMENT,DE_CASE,AUSLASSUNGSPUNKTE,GERMAN_WORD_REPEAT_RULE
 pl=MORFOLOGIK_RULE,CUDZYSLOW_DRUKARSKI,BRAK_SPACJI,BRAK_KROPKI
 sl=POMIŠLJAJ_1,POMIŠLJAJ_2,POMIŠLJAJ_3
