--- a/trunk/JLanguageTool/src/resource/ltcommunity/disabled_rules.properties
+++ b/trunk/JLanguageTool/src/resource/ltcommunity/disabled_rules.properties
@@ -2,7 +2,7 @@
 all=UNPAIRED_BRACKETS,UPPERCASE_SENTENCE_START,WORD_REPEAT_RULE,COMMA_PARENTHESIS_WHITESPACE,WHITESPACE_RULE,HUNSPELL_RULE
 
 fr=FRENCH_WHITESPACE
-de=BISSTRICH,DE_AGREEMENT,DE_CASE,AUSLASSUNGSPUNKTE,GERMAN_WORD_REPEAT_RULE
+de=BISSTRICH,DE_AGREEMENT,DE_CASE,AUSLASSUNGSPUNKTE,GERMAN_WORD_REPEAT_RULE,ABKUERZUNG_LEERZEICHEN,GERMAN_WORD_REPEAT_BEGINNING_RULE,LEERZEICHEN_RECHENZEICHEN
 pl=MORFOLOGIK_RULE,CUDZYSLOW_DRUKARSKI,BRAK_SPACJI,BRAK_KROPKI
 sl=POMIŠLJAJ_1,POMIŠLJAJ_2,POMIŠLJAJ_3
-en=EN_QUOTES
+en=EN_QUOTES,EN_UNPAIRED_BRACKETS
