--- a/trunk/JLanguageTool/src/resource/ltcommunity/disabled_rules.properties
+++ b/trunk/JLanguageTool/src/resource/ltcommunity/disabled_rules.properties
@@ -6,3 +6,4 @@ de=BISSTRICH,DE_AGREEMENT,DE_CASE,AUSLASSUNGSPUNKTE,GERMAN_WORD_REPEAT_RULE,ABKU
 pl=MORFOLOGIK_RULE,CUDZYSLOW_DRUKARSKI,BRAK_SPACJI,BRAK_KROPKI,PL_UNPAIRED_BRACKETS
 sl=POMIŠLJAJ_1,POMIŠLJAJ_2,POMIŠLJAJ_3
 en=EN_QUOTES,EN_UNPAIRED_BRACKETS
+ca=GUIONET_SOLT
