--- a/trunk/JLanguageTool/.classpath
+++ b/trunk/JLanguageTool/.classpath
@@ -35,7 +35,7 @@
 	<classpathentry kind="lib" path="libs/commons-logging-1.1.1.jar"/>
 	<classpathentry kind="lib" path="libs/lucene-core-3.1.0.jar"/>
 	<classpathentry kind="lib" path="libs/lucene-queries-3.1.0.jar"/>
-	<classpathentry kind="lib" path="libs/lucene-test-framework-3.1.0.jar"/>
+	<classpathentry kind="lib" path="libs/lucene-test-framework-3.1.0.jar" sourcepath="C:/Users/user/.m2/repository/org/apache/lucene/lucene-test-framework/3.1.0/lucene-test-framework-3.1.0-sources.jar"/>
 	<classpathentry kind="lib" path="libs/junit-4.7.jar"/>
 	<classpathentry kind="lib" path="libs/jakarta-regexp-1.4.jar"/>
 	<classpathentry kind="lib" path="libs/tika-core-0.9.jar"/>
