[ja] initial support for Japanese, thanks to Takahiro Shinkai

--- a/trunk/JLanguageTool/.classpath
+++ b/trunk/JLanguageTool/.classpath
@@ -27,6 +27,7 @@
 	</classpathentry>
 	<classpathentry kind="lib" path="libs/morfologik-stemming-1.5.3.jar" sourcepath="/morfologik-stemming"/>
 	<classpathentry kind="lib" path="libs/morfologik-speller-1.5.4.jar" sourcepath="/morfologik-speller"/>
+	<classpathentry kind="lib" path="libs/lucene-gosen-1.2.1-ipadic.jar"/>
 	<classpathentry exported="true" kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/3"/>
 	<classpathentry kind="lib" path="libs/jWordSplitter.jar" sourcepath="/jWordSplitter"/>
