--- a/trunk/JLanguageTool/build.properties
+++ b/trunk/JLanguageTool/build.properties
@@ -43,7 +43,6 @@ tika.lib = tika-core-0.9.jar
 ext.tika.lib = ${ext.dir}/${tika.lib}
 xmlsyntax.lib = xml-text-editor-0.0.3.jar
 ext.xmlsyntax.lib = ${ext.dir}/${xmlsyntax.lib}
-
 jna.lib = jna.jar
 ext.jna.lib = ${ext.dir}/${jna.lib}
 
@@ -61,6 +60,9 @@ CJFtransform.lib = CJFtransform_v1.0.1_bin.jar
 ext.CJFtransform.lib = ${ext.dir}/CJFtransform_v1.0.1_bin.jar
 commons-validator.lib = commons-validator-1.3.1.jar
 ext.commons-validator.lib = ${ext.dir}/commons-validator-1.3.1.jar
+
+lucene-gosen.lib = lucene-gosen-1.2.1-ipadic.jar
+ext.lucene-gosen.lib = ${ext.dir}/${lucene-gosen.lib}
 
 ext.junit.lib = ${ext.dir}/build/junit.jar
 
