[ja] Copy Japan resource file to distribution. This removes an error in LanguagetoolGUI.

--- a/trunk/JLanguageTool/build.xml
+++ b/trunk/JLanguageTool/build.xml
@@ -664,6 +664,8 @@
         <copy file="${resource.dir}/ca/disambiguation.xml" todir="${dist.dir}/resource/ca" />
         <copy file="${resource.dir}/ca/README" todir="${dist.dir}/resource/ca" />
         <copy file="${resource.dir}/ca/ca.ngp" todir="${dist.dir}/resource/ca" />
+    	
+    	<copy file="${resource.dir}/ja/ja.ngp" todir="${dist.dir}/resource/ja" />
 
         <copy file="${resource.dir}/zh/coreDict.dct" todir="${dist.dir}/resource/zh" />
         <copy file="${resource.dir}/zh/BigramDict.dct" todir="${dist.dir}/resource/zh" />
